multi_nodes/app/foxids/foxids.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foxids-deployment
  labels:
    app: foxids
spec:
  replicas: 3
  selector:
    matchLabels:
      app: foxids
  template:
    metadata:
      labels:
        app: foxids
    spec:
      containers:
        - name: foxids
          image: foxids/foxids:2.2.2
          #image: foxids/foxids:latest-test
          imagePullPolicy: Always
          ports:
            - containerPort: 8800
          livenessProbe:
            httpGet:
              path: /health
              port: 8800
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          resources:
            requests:
              cpu: "500m"
              memory: "256Mi"
            limits:
              cpu: "900m"
              memory: "512Mi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foxids-control-deployment
  labels:
    app: foxids-control
spec:
  replicas: 3
  selector:
    matchLabels:
      app: foxids-control
  template:
    metadata:
      labels:
        app: foxids-control
    spec:
      containers:
        - name: foxids-control
          image: foxids/foxids-control:2.2.2
          #image: foxids/foxids-control:latest-test
          imagePullPolicy: Always
          ports:
            - containerPort: 8800
          livenessProbe:
            httpGet:
              path: /api/health
              port: 8800
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          resources:
            requests:
              cpu: "300m"
              memory: "256Mi"
            limits:
              cpu: "600m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: foxids
spec:
  ports:
    - port: 8800
      targetPort: 8800
      protocol: TCP
  type: ClusterIP
  selector:
    app: foxids
---
apiVersion: v1
kind: Service
metadata:
  name: foxids-control
spec:
  ports:
    - port: 8800
      targetPort: 8800
      protocol: TCP
  type: ClusterIP
  selector:
    app: foxids-control
